# azure-cost-advisor

./: .gitignore  Dockerfile  README.md  cost_optimizer.py  dashboard.py  pyproject.toml  requirements.txt  roadmap.md
azure_cost_advisor/: actions.py  analysis.py  clients.py  config.py  pricing.py  reporting.py  utils.py
tests/: test_analysis.py
